# raysearch

./: .gitignore  .serpsage_events.jsonl  AGENTS.md  API.md  CLAUDE.md  README.md  pyproject.toml  search.py  search_config.yaml  search_config_example.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
demo/: answer.py  fetch.py  research.py  search.py  search_config_example.yaml
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.override.yml  docker-compose.yml  raysearch.example.yaml
docs/ja-JP/: API.md  README.md
docs/zh-CN/: API.md  README.md
docs/zh-TW/: API.md  README.md
scripts/: finalize_task.py  live_expand_eval.py  run_scoped_checks.py  update_agents_tree.py
search_core/: __init__.py  client.py  config.py  crawler.py  enrich.py  models.py  pipeline.py  scorer.py  scoring.py  searcher.py  tools.py  utils.py  web.py
src/: answer.py  fetch.py  research.py  search.py  search_config_example.yaml  test.py
src/raysearch/: __init__.py
src/raysearch/api/: __init__.py  __main__.py  app.py  research_tasks.py
src/raysearch/app/: __init__.py  engine.py
src/raysearch/components/: __init__.py  base.py  loads.py
src/raysearch/core/: __init__.py  overrides.py  workunit.py
src/raysearch/dependencies/: __init__.py  utils.py
src/raysearch/settings/: load.py  models.py
src/raysearch/steps/: __init__.py  base.py
src/raysearch/telemetry/: __init__.py  base.py  emitter.py
src/raysearch/tokenize/: __init__.py
src/serpsage/: __init__.py  error_details.py  utils.py
src/serpsage/app/: __init__.py  bootstrap.py  container.py  engine.py  request.py  response.py  runtime.py  tokens.py
src/serpsage/cache/: null.py  sqlite.py
src/serpsage/components/: __init__.py  base.py  container.py  discovery.py  loads.py  registry.py
src/serpsage/contracts/: __init__.py  base.py  errors.py  llm.py  protocols.py  services.py
src/serpsage/core/: __init__.py  client.py  crawler.py  enrich.py  models.py  overrides.py  runtime.py  scorer.py  searcher.py  tools.py  tuning.py  workunit.py
src/serpsage/dependencies/: __init__.py  contracts.py  resolver.py  utils.py
src/serpsage/domain/: __init__.py  dedupe.py  enrich.py  filter.py  http.py  normalize.py  overview.py  rerank.py
src/serpsage/extract/: encoding.py  html_basic.py  html_main.py  utils.py
src/serpsage/fetch/: auto.py  common.py  curl_cffi.py  http.py  rate_limit.py
src/serpsage/load/: __init__.py  components.py
src/serpsage/models/: base.py  errors.py  extract.py  fetch.py  llm.py  outcomes.py  pipeline.py  research.py  telemetry.py
src/serpsage/overview/: null.py  openai.py  openai_compat.py  schema.py
src/serpsage/pipeline/: __init__.py  base.py  builtins.py  context.py  dedupe.py  enrich.py  filter.py  normalize.py  overview.py  rank.py  rerank.py  runner.py  search.py  step.py  steps.py
src/serpsage/provider/: searxng.py
src/serpsage/rank/: blend.py  bm25.py  heuristic.py  normalize.py  utils.py
src/serpsage/settings/: load.py  models.py  resources.py
src/serpsage/steps/: __init__.py  base.py  models.py
src/serpsage/telemetry/: __init__.py  base.py  emitter.py  trace.py
src/serpsage/text/: abstracts.py  chunking.py  normalize.py  similarity.py  tokenize.py  utils.py
src/serpsage/tokenize/: __init__.py
src/serpsage/util/: collections.py
src/serpsage/utils/: __init__.py  json.py  tokenize.py
tests/: conftest.py  test_architecture_contracts.py  test_bootstrap_di.py  test_cache_factory_backend_select.py  test_cache_factory_fallback.py  test_cache_memory_ttl.py  test_cache_sqlite_ttl.py  test_chunk_scoring_bm25.py  test_chunk_scoring_relevance.py  test_chunk_scoring_template.py  test_components_builders.py  test_config_load.py  test_dedupe_lsh.py  test_dependencies_provider.py  test_depth_enrichment.py  test_depth_preset_config.py  test_enrich_boilerplate_pruning.py  test_enrich_min_chunk_score_decoupled.py  test_extract_html_basic.py  test_extract_html_main_content.py  test_fetch_auto_switches_to_curl_on_block_page.py  test_fetch_cache_key_varies_on_language_and_strategy.py  test_fetch_content_type_sniffing.py  test_fetch_curl_retry_after_respected_but_capped.py  test_fetch_retry_after_respected_but_capped.py  test_fetch_settings_validation.py  test_fetch_truncate_does_not_fail.py  test_openai_schema_fallback.py  test_overview_citation_validation.py  test_overview_openai_official_client.py  test_overview_schema_strict.py  test_overview_step.py  test_overview_step_cache.py  test_overview_step_self_heal.py  test_overview_summary_truncation.py  test_pipeline_page_rerank.py  test_pipeline_processing.py  test_pipeline_smoke.py  test_profile_selection.py  test_rank_blend_composition.py  (+12 more)
tests/app/: test_answer_engine.py  test_engine_request_id.py  test_fetch_request.py  test_fetch_request_validation.py  test_research_engine.py  test_search_request.py
tests/components/: test_extract_smart_markdown.py  test_overview_factory.py  test_overview_gemini.py  test_rank_heuristic_v2.py
tests/components/extract/: test_markdown_code_fidelity.py  test_markdown_content_options.py  test_markdown_engine_fusion.py  test_markdown_inline_fidelity.py  test_markdown_links_inventory.py  test_markdown_postprocess_safe.py  test_markdown_primary_secondary.py  test_markdown_regression_corpus.py
tests/components/fetch/: test_auto_blocked_logic.py  test_auto_fallback.py
tests/fixtures/extract/: code_table_page.html  complex_article.html  complex_list_page.html  github_like_page.html
tests/models/: test_fetch_step_context_shape.py
tests/pipeline/: test_overview_step.py
tests/pipeline/fetch/: test_fetch_crawl_mode.py  test_fetch_multi_url.py  (+2 more)
tests/settings/: test_answer_settings.py  test_enrich_settings_minimal.py  test_fetch_abstract_defaults.py  test_overview_settings.py  test_research_settings.py  test_runner_settings.py  test_search_settings.py
tests/steps/: test_markdown_extractor_large_html.py  test_runner_pool.py  test_search_deep.py  test_search_expand_functionality.py  test_search_optimize_step.py
tests/text/: test_chunking_markdown.py
(+364 files in other folders)
