[project]
name = "serpsage"
version = "0.1.0"
authors = [
    {name = "Kotodama",email = "2682064633@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
description = "AI-overview style SERP context builder on top of SearxNG (sync + async)."
keywords = ["bot", "chatbot", "qq", "qqbot", "cqhttp", "coolq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.11,<4"
dependencies = [
    "anyio==4.9.0",
    "beautifulsoup4",
    "curl_cffi",
    "httpx>=0.27,<1",
    "openai>=2.17.0",
    "pydantic>=2.7,<3",
    "rank-bm25",
    "jieba",
    "pyyaml",
    "typing_extensions>=4.10,<5",
]

[project.optional-dependencies]
# Not required by the core SERP pipeline; kept as extras to avoid heavy/compiled
# dependencies for headless Docker/API deployments.
image = ["pillow", "imagehash", "rawpy", "numpy"]
gui = ["PySide6"]
api = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.27,<1"]

[build-system]
requires = ["setuptools>=74"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    # dev
    "setuptools>=74",
    "trio>=0.26",
    "exceptiongroup>=1",
    "tomli>=2",
    # lint
    "ruff>=0.6",
    "mypy>=1",

    # docs
    "sophia-doc>=0.1",
    "tomlkit>=0.13",
    # test
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-xdist>=3",
    "pytest-cov>=5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
exclude = ["typeshed-fallback", "*/typeshed/*"]
ignore = [
    "D",        # pydocstyle
    "T",
    "ANN",
    "RUF",
    "ERA",
    "C90",      # mccabe
    "FBT",      # flake8-boolean-trap
    "EM",       # flake8-errmsg
    "INP",      # flake8-no-pep420
    "E501",     # Line too long, handled by formatter
    "D415",     # First line should end with a period, question mark, or exclamation point
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ASYNC109", # Async function definition with a timeout parameter
    "S101",     # Use of assert detected
    "COM812",   # Trailing comma missing
    "TD003",    # Missing issue link on the line following this TODO
    "FIX002",   # Line contains TODO
    "PGH003",   # Use specific rule codes when ignoring type issues
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "TRY003",   # Avoid specifying long messages outside the exception class
    "PERF203",  # try-except within a loop incurs performance overhead
    "D107",
    "BLE001",
    "PLW2901",
    "TRY301",
    "N802",
    "SLF001",
    "PLR2004",
    "A002",
    "PLR0915",
    "S311",
]
allowed-confusables = ["，", "：", "！", "（", "）"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.isort]
known-third-party = ["pydantic", "aiohttp", "structlog"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.pyright]
exclude = ["**/.conda", "**/.venv", "**/__pycache__"]
pythonVersion = "3.11"
pythonPlatform = "All"
#typeCheckingMode = "strict"
python.linting.enabled = false
reportUnnecessaryIsInstance = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportPropertyTypeMismatch = true
reportInvalidTypeVarUse = false
reportShadowedImports = true
reportUninitializedInstanceVariable = false
reportPrivateUsage = false
