[project]
name = "raysearch"
version = "0.1.0"
authors = [
    {name = "Kotodama",email = "2682064633@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
description = "Async SERP, fetch, answer, and research engine for building AI-overview style search workflows."
keywords = ["search", "serp", "research", "rag", "crawler", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11,<4"
dependencies = [
    "anyio==4.9.0",
    "httpx>=0.27,<1",
    "jsonschema>=4.23",
    "pydantic>=2.7,<3",
    "jieba",
    "pyyaml",
    "typing_extensions>=4.10,<5",
]

[project.optional-dependencies]
# Not required by the core SERP pipeline; kept as extras to avoid heavy/compiled
# dependencies for headless Docker/API deployments.
extract = [
    "beautifulsoup4",
    "selectolax>=0.3.26",
    "trafilatura>=1.10.0",
    "html-to-markdown>=2.28.0",
]
extract_pdf = [
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.3.4",
    "pypdf>=5.2.0",
]
extract_plus = [
    "inscriptis>=2.5.0",
]
crawl = [
    "curl_cffi",
    "playwright>=1.49.1",
    "beautifulsoup4",
]
rank = [
    "rank-bm25",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
]
cache = [
    "aiosqlite>=0.22.1",
    "aioredis>=2.0.1",
    "aiomysql>=0.3.2",
    "asyncmy>=0.2.11",
    "sqlalchemy>=2.0.46",
]
api = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.27,<1"]
overview = ["openai>=2.17.0", "google-genai>=1.63.0", "dashscope>=1.0.0"]
to_zh_tw = ["opencc>=1.2.0"]
stopwords = ["marisa-trie>=1.3.1"]
tracking = ["structlog>=24.1.0"]
# Convenience extras for common use cases
full = [
    "raysearch[extract,extract_pdf,crawl,rank,cache,api,overview,tracking]",
]

[build-system]
requires = ["setuptools>=74"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    # dev
    "setuptools>=74",
    "trio>=0.26",
    "exceptiongroup>=1",
    "tomli>=2",
    # lint
    "ruff>=0.6",
    "mypy>=1",
    "pyright>=1.1.408",
    # docs
    "sophia-doc>=0.1",
    "tomlkit>=0.13",
    # test
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-xdist>=3",
    "pytest-cov>=5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
exclude = ["typeshed-fallback", "*/typeshed/*"]
ignore = [
    "D",        # pydocstyle
    "T",
    "ANN",
    "RUF",
    "ERA",
    "C90",      # mccabe
    "FBT",      # flake8-boolean-trap
    "EM",       # flake8-errmsg
    "INP",      # flake8-no-pep420
    "E501",     # Line too long, handled by formatter
    "D415",     # First line should end with a period, question mark, or exclamation point
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ASYNC109", # Async function definition with a timeout parameter
    "S101",     # Use of assert detected
    "COM812",   # Trailing comma missing
    "TD003",    # Missing issue link on the line following this TODO
    "FIX002",   # Line contains TODO
    "PGH003",   # Use specific rule codes when ignoring type issues
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0911",  # Too many return statements
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY300",   # Consider moving this statement to an else block
    "PERF203",  # try-except within a loop incurs performance overhead
    "D107",
    "BLE001",
    "PLW2901",
    "TRY301",
    "N802",
    "SLF001",
    "PLR2004",
    "TC001",
    "TC002",
    "PLC0415",
    "SIM102",
    "S110",
    "ARG002",
    "PT018",
    "A002",
    "PLR0915",
    "S311",
    "B008",
    "S608",
]
allowed-confusables = ["，", "：", "！", "（", "）"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.isort]
known-third-party = ["pydantic", "aiohttp", "structlog"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.pyright]
exclude = ["**/.conda", "**/.venv", "**/__pycache__", "**/node_modules", "**/.*"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnnecessaryIsInstance = false
reportCallInDefaultInitializer = false
reportImplicitOverride = true
reportPropertyTypeMismatch = true
reportInvalidTypeVarUse = false
reportUninitializedInstanceVariable = false
reportPrivateUsage = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportMissingTypeStubs = false
reportMissingTypeArgument = false
reportConstantRedefinition = false
reportUnusedVariable = false
reportUnnecessaryComparison = false
reportUnnecessaryCast = false

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
namespace_packages = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["raysearch.components.extract.markdown.*"]
strict = true

[[tool.mypy.overrides]]
module = [
    "trafilatura",
    "html_to_markdown",
    "html_to_markdown.*",
    "fitz",
    "pymupdf",
    "pymupdf.*",
    "pymupdf4llm",
    "pymupdf4llm.*",
    "selectolax",
    "selectolax.*",
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true
